<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="kr.ac.ssu.myrecipe.MajorFragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_refrigerator"
        android:name="kr.ac.ssu.myrecipe.MajorFragment.RefrigeratorFragment"
        android:label="@string/title_refrigerator"
        tools:layout="@layout/fragment_refrigerator" />

    <fragment
        android:id="@+id/navigation_undefined"
        android:name="kr.ac.ssu.myrecipe.MajorFragment.UndefinedFragment"
        android:label="미정"
        tools:layout="@layout/fragment_undefined" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="kr.ac.ssu.myrecipe.MajorFragment.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

</navigation>