<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signup_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/round_edge_down"
        android:elevation="2dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/signup_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup"
            android:textSize="25dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/user_input"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                android:id="@+id/user_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:paddingVertical="20dp"
                android:paddingStart="20dp"
                android:background="@drawable/rounded_background"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="20dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColorHint="#A6BCD0"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/user_password"/>

            <EditText
                android:id="@+id/user_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:paddingVertical="20dp"
                android:paddingStart="20dp"
                android:background="@drawable/rounded_background"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="20dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:textColorHint="#A6BCD0"
                android:textSize="15dp"
                app:layout_constraintBottom_toTopOf="@id/user_nickname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_id" />

            <EditText
                android:id="@+id/user_nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:paddingVertical="20dp"
                android:paddingStart="20dp"
                android:background="@drawable/rounded_background"
                android:drawableStart="@drawable/ic_account"
                android:drawablePadding="20dp"
                android:inputType="textPassword"
                android:hint="@string/nickname"
                android:importantForAutofill="no"
                android:textColorHint="#A6BCD0"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_password"/>
        </androidx.constraintlayout.widget.ConstraintLayout>



        <Button
            android:id="@+id/signup_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:text="@string/signup"
            android:textSize="15dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:background="@drawable/rounded_btn"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/signin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00ff0000"
        android:text="@string/signin"
        android:textSize="15dp"
        android:textColor="#A6BCD0"
        app:layout_constraintTop_toBottomOf="@id/signup_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

